SCMOD-3700: Data Processing Service: Add scope to the global config (#39)
* SCMOD-3700: Data Processing Service: Add scope to the global config

* SCMOD-3700: Updates postman put request example for global config

* SCMOD-3700: Updates

* SCMOD-3700: Updated scope description in global config  and documentation to reflect changes in this jira

* SCMOD-3700: Updated global config documentation.
